--- a/NOVA/Views/Home/Index.cshtml
+++ b/NOVA/Views/Home/Index.cshtml
@@ -463,7 +463,7 @@
                         </script>
                         @{ var onlineusers = ViewBag.OnlineUsers; int a = 0;}
                     @{
-        if (ViewBag.RoleName != "uretim4")
+        if (Request.Cookies["RoleName"].Value != "uretim4")
             {
                                         <div class="card col" style="display:unset">
                                             <div class="table-responsive text-nowrap mt-3">
