--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
@@ -14,8 +14,8 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-label-group outline m-0">
-                                <input type="text" id="IRS_NO" class="form-control" placeholder="İRSALİYE NO" autocomplete="off" />
-                                <span><label for="IRS_NO">İRSALİYE NO</label></span>
+                                <input type="text" id="IRS_NO" class="form-control" placeholder="İRS.NO" autocomplete="off" />
+                                <span><label for="IRS_NO">İRS.NO</label></span>
                             </div>
                         </div>
                     </div>
@@ -34,8 +34,8 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-label-group outline m-0">
-                                <input type="text" id="GIRIS_DEPO" class="form-control" placeholder="GİRİŞ DEPO" autocomplete="off" />
-                                <span><label for="GIRIS_DEPO">GİRİŞ DEPO</label></span>
+                                <input type="text" id="GIRIS_DEPO" class="form-control" placeholder="DEPO" autocomplete="off" />
+                                <span><label for="GIRIS_DEPO">DEPO</label></span>
                             </div>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                                             <div class="col-sm">
                                                 <div class="form-label-group outline m-0">
                                                     <input type="text" id="SERİ_NO_4" class="form-control" autocomplete="off" value="" />
-                                                    <span><label for="SERİ_NO_4">KAPLAMA KALINLIĞI</label></span>
+                                                    <span><label for="SERİ_NO_4">KAPLAMA</label></span>
                                                 </div>
                                             </div>
                                         </div>
