--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -12,7 +12,7 @@
 
 <html>
 <head>
-    <title>Nova | Efece Galvaniz/Üretim Kayıtları</title>
+    <title>Nova | Üretim Kayıtları</title>
     <link href="~/bootstrap-icons-1.11.2/font/bootstrap-icons.min.css" rel="stylesheet" />
     <script src="~/Scripts/sweetAlert.js"></script>
     <link href="~/Content/table/placeholder-loading.min.css" rel="stylesheet" />
@@ -3805,9 +3805,9 @@
         }
         function silFormatter(value, index, row) {
             if (index.ORAN == 0) {
-                return '<div style="display: flex; justify-content: center; align-items: center;"><button type="button" id="SilButton" onclick="Sil(\'' + index.SERI_NO + '\')" class="btn btn-danger" style="height:28px;width: auto; display: flex; justify-content: center; align-items: center;margin-right:5px">SİL</button></div>';
+                return '<div style="display: flex; justify-content: center; align-items: center;"><button type="button" id="SilButton" onclick="Sil(\'' + index.SERI_NO + '\')" class="btn btn-danger" style="height:28px;width: auto; display: flex; justify-content: center; align-items: center;margin-right:5px">SİL</button><button type="button" id="aktarButton" onclick="Aktar(\'' + index.SERI_NO + '\')" class="btn btn-warning" style="height:28px;width: auto; display: flex; justify-content: center; align-items: center;margin-right:5px">AKTAR</button></div>';
             } else {
-                return "-";
+                return '<div style="display: flex; justify-content: center; align-items: center;"><button type="button" id="aktarButton" onclick="Aktar(\'' + index.SERI_NO + '\')" class="btn btn-warning" style="height:28px;width: auto; display: flex; justify-content: center; align-items: center;margin-right:5px">AKTAR</button></div>';
             }
 
         }
@@ -4483,6 +4483,11 @@
             })
 
             $("#guncelleButton").attr("data-seri", decodedText);
+        }
+        function Aktar(value) {
+
+
+
         }
     </script>
 
