--- a/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/MusteriSiparisRaporuPartials/SevkFormu_Modal.cshtml
@@ -21,8 +21,8 @@
                         </div>
                         <div class="col-sm-2 col-12" style="width:12.7rem;">
                             <div class="form-label-group outline m-0">
-                                <input type="text" id="CIKIS_DEPO" class="form-control" placeholder="ÇIKIŞ DEPO" autocomplete="off" />
-                                <span><label for="CIKIS_DEPO">ÇIKIŞ DEPO</label></span>
+                                <input type="text" id="CIKIS_DEPO" class="form-control" placeholder="DEPO" autocomplete="off" />
+                                <span><label for="CIKIS_DEPO">DEPO</label></span>
                             </div>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                                             <div class="col-sm">
                                                 <div class="form-label-group outline m-0">
                                                     <input type="text" id="SERI_NO_4" class="form-control" autocomplete="off" value="" />
-                                                    <span><label for="SERI_NO_4">KAPLAMA KALINLIĞI</label></span>
+                                                    <span><label for="SERI_NO_4">KAPLAMA</label></span>
                                                 </div>
                                             </div>
                                         </div>
