--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -5,29 +5,19 @@
     //Layout = "~/Views/Shared/_Layout _yonetim_stok.cshtml";
 }
 
-
-
-<link href="https://unpkg.com/bootstrap-table@1.21.1/dist/bootstrap-table.min.css" rel="stylesheet">
-
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-<link href="https://unpkg.com/placeholder-loading/dist/css/placeholder-loading.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-<link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <style>
     body {
         padding: 0 0 0 4rem !important;
     }
+
     .vidparticipant {
         height: 600px;
         max-width: 100%;
         overflow: hidden;
     }
+
     .card-view {
         border-bottom: 1px dashed gray;
         margin-top: 2px;
@@ -101,8 +91,9 @@
             display: none;
         }*/
     }
-    body{
-        overflow:hidden !important;
+
+    body {
+        overflow: hidden !important;
     }
 </style>
 <style>
@@ -161,7 +152,7 @@
 <div class="container-fluid d-flex">
 
     <div class="card mx-auto" style="font-size:12px">
-      
+
 
 
 
@@ -217,7 +208,7 @@
 
                 </div>
 
-                
+
                 <table id="table"
                        class="table table-striped"
                        data-show-fullscreen="true"
@@ -536,8 +527,7 @@
             var a, b, i, val = this.value.trim();
 
             closeAllLists();
-            if (!val)
-            {
+            if (!val) {
                 $('#SERI_NO').val('');
 
                 $("#MIKTAR").val(0);
